// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Test for Math Magicians project Snapshot Calculator rendering test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="main-container calc-main-container"
      >
        <h2
          class="title-calculator"
        >
          Let's do some math!
        </h2>
        <div
          class="calculator-container"
        >
          <input
            class="calc-total"
            type="text"
            value="0"
          />
          <div
            class="calc-buttons-container"
          >
            <button
              class="calc-button"
              type="button"
            >
              AC
            </button>
            <button
              class="calc-button"
              type="button"
            >
              +/-
            </button>
            <button
              class="calc-button"
              type="button"
            >
              %
            </button>
            <button
              class="calc-button"
              type="button"
            >
              ÷
            </button>
            <button
              class="calc-button"
              type="button"
            >
              7
            </button>
            <button
              class="calc-button"
              type="button"
            >
              8
            </button>
            <button
              class="calc-button"
              type="button"
            >
              9
            </button>
            <button
              class="calc-button"
              type="button"
            >
              x
            </button>
            <button
              class="calc-button"
              type="button"
            >
              4
            </button>
            <button
              class="calc-button"
              type="button"
            >
              5
            </button>
            <button
              class="calc-button"
              type="button"
            >
              6
            </button>
            <button
              class="calc-button"
              type="button"
            >
              -
            </button>
            <button
              class="calc-button"
              type="button"
            >
              1
            </button>
            <button
              class="calc-button"
              type="button"
            >
              2
            </button>
            <button
              class="calc-button"
              type="button"
            >
              3
            </button>
            <button
              class="calc-button"
              type="button"
            >
              +
            </button>
            <button
              class="calc-button"
              type="button"
            >
              0
            </button>
            <button
              class="calc-button"
              type="button"
            >
              .
            </button>
            <button
              class="calc-button"
              type="button"
            >
              =
            </button>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="main-container calc-main-container"
    >
      <h2
        class="title-calculator"
      >
        Let's do some math!
      </h2>
      <div
        class="calculator-container"
      >
        <input
          class="calc-total"
          type="text"
          value="0"
        />
        <div
          class="calc-buttons-container"
        >
          <button
            class="calc-button"
            type="button"
          >
            AC
          </button>
          <button
            class="calc-button"
            type="button"
          >
            +/-
          </button>
          <button
            class="calc-button"
            type="button"
          >
            %
          </button>
          <button
            class="calc-button"
            type="button"
          >
            ÷
          </button>
          <button
            class="calc-button"
            type="button"
          >
            7
          </button>
          <button
            class="calc-button"
            type="button"
          >
            8
          </button>
          <button
            class="calc-button"
            type="button"
          >
            9
          </button>
          <button
            class="calc-button"
            type="button"
          >
            x
          </button>
          <button
            class="calc-button"
            type="button"
          >
            4
          </button>
          <button
            class="calc-button"
            type="button"
          >
            5
          </button>
          <button
            class="calc-button"
            type="button"
          >
            6
          </button>
          <button
            class="calc-button"
            type="button"
          >
            -
          </button>
          <button
            class="calc-button"
            type="button"
          >
            1
          </button>
          <button
            class="calc-button"
            type="button"
          >
            2
          </button>
          <button
            class="calc-button"
            type="button"
          >
            3
          </button>
          <button
            class="calc-button"
            type="button"
          >
            +
          </button>
          <button
            class="calc-button"
            type="button"
          >
            0
          </button>
          <button
            class="calc-button"
            type="button"
          >
            .
          </button>
          <button
            class="calc-button"
            type="button"
          >
            =
          </button>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Test for Math Magicians project Snapshot Home rendering test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="main-container"
      >
        <h2
          class="title-home"
        >
          Welcome to our page!
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
        </p>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="main-container"
    >
      <h2
        class="title-home"
      >
        Welcome to our page!
      </h2>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
      </p>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot Test for Math Magicians project Snapshot Quote rendering test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="main-container quote-container"
      >
        <p>
           —
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="main-container quote-container"
    >
      <p>
         —
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
